Restore CSS reset and navbar styles

--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.5px;
-  
+  text-decoration: none;
   background-color: #187526;
   color: white;
   border: none;
